# nflowCapAgent

./: .gitignore  README.md
agent/: Cargo.toml  config.example.linux.toml  config.example.toml
agent/.cargo/: config.toml
agent/scripts/: build-linux.sh  install-linux.sh  install-service.ps1  uninstall-linux.sh  uninstall-service.ps1
agent/src/: agent.rs  config.rs  main.rs
agent/src/capture/: mod.rs  parse.rs
agent/src/export/: ipfix.rs  mod.rs  netflow_v9.rs
agent/src/flow/: mod.rs  table.rs
agent/src/service/: mod.rs  windows.rs
ansible/: ansible.cfg  requirements.yml
ansible/bootstrap/: bootstrap-linux.sh  bootstrap-winrm.ps1
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  linux_agents.yml  windows_agents.yml
ansible/playbooks/: deploy.yml
ansible/roles/netflow_linux/handlers/: main.yml
ansible/roles/netflow_linux/tasks/: main.yml
ansible/roles/netflow_linux/templates/: config.toml.j2  netflowAgent.service.j2
ansible/roles/netflow_windows/handlers/: main.yml
ansible/roles/netflow_windows/tasks/: main.yml
ansible/roles/netflow_windows/templates/: config.toml.j2
docs/: clean-reinstall-v0.3.1.adoc  logs-cheatsheet.adoc  netflowAgent-design.adoc  netflowAgent-install-linux.adoc  netflowAgent-install-windows.adoc  netflowAgent-tcp-flags.adoc  nfclowCapAgentAnsible.adoc  nfsen-ng-install-ubuntu2404.adoc
