[package]
name = "netflow_agent"
version = "0.3.1"
edition = "2021"
description = "Host NetFlow/IPFIX export agent for Windows and Linux"
license = "MIT OR Apache-2.0"

[[bin]]
name = "netflowAgent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
pcap = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
